--- a/client/src/components/Toast/index.css
+++ b/client/src/components/Toast/index.css
@@ -1,7 +1,11 @@
+:root {
+  --bg-color: rgb(21 128 61);
+}
+
 .toast {
   position: absolute;
-  top: 100px;
-  right: 30px;
+  top: 85px;
+  right: 15px;
   border-radius: 12px;
   background: rgb(241 245 249);
   padding: 20px 35px 20px 25px;
@@ -26,7 +30,7 @@
   justify-content: center;
   height: 35px;
   min-width: 35px;
-  background-color: rgb(21 128 61);
+  background-color: var(--bg-color);
   color: rgb(241 245 249);
   font-size: 20px;
   border-radius: 50%;
@@ -71,7 +75,7 @@
 
 .progress.active:before {
   animation: progress 5s linear forwards;
-  background-color: rgb(21 128 61);
+  background-color: var(--bg-color);
 }
 
 @keyframes progress {
